--- a/piDisplay/Base.lproj/Main.storyboard
+++ b/piDisplay/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,13 +13,101 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="piDisplay" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="rPi host" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dpg-UB-7QW">
+                                <rect key="frame" x="20" y="98.5" width="335" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="user" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B7r-lK-80s">
+                                <rect key="frame" x="20" y="148.5" width="335" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="passwd" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dGB-Pt-N5m">
+                                <rect key="frame" x="20" y="198.5" width="335" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YXd-vp-WXj">
+                                <rect key="frame" x="131.5" y="248.5" width="112" height="30"/>
+                                <state key="normal" title="Test Connection"/>
+                                <connections>
+                                    <action selector="testButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RMW-Sc-yS8"/>
+                                </connections>
+                            </button>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N1P-Ka-xnU">
+                                <rect key="frame" x="119" y="325" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="backlightSwitchPressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="RQc-DD-k0v"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not Connected" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QW6-SX-g31">
+                                <rect key="frame" x="129" y="58" width="117" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Backlight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nXy-Sv-DS3">
+                                <rect key="frame" x="20" y="330" width="71" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Brightness" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSc-ud-4Ta">
+                                <rect key="frame" x="20" y="406" width="82" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="11" minValue="11" maxValue="255" continuous="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P3w-uM-Wfg">
+                                <rect key="frame" x="117" y="402" width="118" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="brightnessSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="l6n-us-tpw"/>
+                                </connections>
+                            </slider>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="QW6-SX-g31" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="38" id="0dA-aG-hXV"/>
+                            <constraint firstItem="YXd-vp-WXj" firstAttribute="top" secondItem="dGB-Pt-N5m" secondAttribute="bottom" constant="20" id="CYM-eR-ApV"/>
+                            <constraint firstItem="dGB-Pt-N5m" firstAttribute="width" secondItem="B7r-lK-80s" secondAttribute="width" id="MKy-0t-sww"/>
+                            <constraint firstItem="B7r-lK-80s" firstAttribute="width" secondItem="dpg-UB-7QW" secondAttribute="width" id="R1x-jM-qVc"/>
+                            <constraint firstItem="B7r-lK-80s" firstAttribute="centerX" secondItem="dpg-UB-7QW" secondAttribute="centerX" id="URS-u8-5Pl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dpg-UB-7QW" secondAttribute="trailing" constant="20" id="Wvk-dx-yBz"/>
+                            <constraint firstItem="dpg-UB-7QW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="d0T-Sc-ZtK"/>
+                            <constraint firstItem="dGB-Pt-N5m" firstAttribute="centerX" secondItem="B7r-lK-80s" secondAttribute="centerX" id="hpi-7c-IHM"/>
+                            <constraint firstItem="dpg-UB-7QW" firstAttribute="top" secondItem="QW6-SX-g31" secondAttribute="bottom" constant="20" id="m6D-CV-E4Z"/>
+                            <constraint firstItem="B7r-lK-80s" firstAttribute="top" secondItem="dpg-UB-7QW" secondAttribute="bottom" constant="20" id="nue-oW-VM9"/>
+                            <constraint firstItem="QW6-SX-g31" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qXj-dh-Smo"/>
+                            <constraint firstItem="YXd-vp-WXj" firstAttribute="centerX" secondItem="dGB-Pt-N5m" secondAttribute="centerX" id="rvl-zT-wQf"/>
+                            <constraint firstItem="dpg-UB-7QW" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="tWh-HE-umC"/>
+                            <constraint firstItem="dGB-Pt-N5m" firstAttribute="top" secondItem="B7r-lK-80s" secondAttribute="bottom" constant="20" id="zFU-dR-Sdk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="backlightLabel" destination="nXy-Sv-DS3" id="nZB-Ub-PXH"/>
+                        <outlet property="backlightSwitch" destination="N1P-Ka-xnU" id="av2-Ez-pWA"/>
+                        <outlet property="brightnessLabel" destination="PSc-ud-4Ta" id="861-Xk-VTL"/>
+                        <outlet property="brightnessSlider" destination="P3w-uM-Wfg" id="v4w-AS-Zqz"/>
+                        <outlet property="connectionStatusLabel" destination="QW6-SX-g31" id="ayn-aq-5tn"/>
+                        <outlet property="pihostTextfield" destination="dpg-UB-7QW" id="53X-Ot-xxg"/>
+                        <outlet property="pipasswdTextfield" destination="dGB-Pt-N5m" id="nYu-Q4-O6B"/>
+                        <outlet property="piuserTextfield" destination="B7r-lK-80s" id="K1K-qT-dch"/>
+                        <outlet property="testConnectionButton" destination="YXd-vp-WXj" id="MEr-d5-cSO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
